Fix stats margin on mobile

--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -227,6 +227,10 @@ header {
       height: 30px;
     }
   }
+
+  .trip-stats {
+    margin: 3% 0;
+  }
 }
 
 @media screen and (max-width: 375px) {
